# jumpserver-navicat

./: Cargo.toml  MySQL.reg  README.md  build.rs  reg.reg  test.php
src/: encrypt.rs  main.rs  navicat.rs  php.rs  protocol.rs  reg.rs  regedit.rs  uac.rs
src/protocol/: mysql.rs  other.rs
