[package]
name = "jump_server_client_navicat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
hex = "0.4.3"
serde = { version = "1.0.188" ,features = ["derive"] }
serde_json = { version = "1.0.107",features = ["default"] }
rust-crypto = { version = "0.2.36" }
byteorder = "1.4.3"
